{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 95,
  "lineage": "b4b12128-76bf-c738-8ff0-9405d85516bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "network_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:internet-gateway/igw-09fef310c74726c37",
            "id": "igw-09fef310c74726c37",
            "owner_id": "839684713127",
            "tags": {
              "Name": "network-igw"
            },
            "tags_all": {
              "Name": "network-igw"
            },
            "vpc_id": "vpc-026517932c2bfc3aa"
          },
          "dependencies": [
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:route-table/rtb-0eba5fe381d97757c",
            "id": "rtb-0eba5fe381d97757c",
            "owner_id": "839684713127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09fef310c74726c37",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT!!!!"
            },
            "tags_all": {
              "Name": "RT!!!!"
            },
            "timeouts": null,
            "vpc_id": "vpc-026517932c2bfc3aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.network_IGW",
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:route-table/rtb-0b5195fb784d8ac45",
            "id": "rtb-0b5195fb784d8ac45",
            "owner_id": "839684713127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09fef310c74726c37",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT$$$$$"
            },
            "tags_all": {
              "Name": "RT$$$$$"
            },
            "timeouts": null,
            "vpc_id": "vpc-026517932c2bfc3aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.network_IGW",
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013ef95591f2abe4a",
            "route_table_id": "rtb-0eba5fe381d97757c",
            "subnet_id": "subnet-0799c8551b00a37ec"
          },
          "dependencies": [
            "aws_internet_gateway.network_IGW",
            "aws_route_table.RT1",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010e82a3dac32c517",
            "route_table_id": "rtb-0b5195fb784d8ac45",
            "subnet_id": "subnet-058532d8b6a44ec23"
          },
          "dependencies": [
            "aws_internet_gateway.network_IGW",
            "aws_route_table.RT2",
            "aws_subnet.subnet-2",
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:subnet/subnet-0799c8551b00a37ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "192.168.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0799c8551b00a37ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839684713127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1"
            },
            "tags_all": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-026517932c2bfc3aa"
          },
          "dependencies": [
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:subnet/subnet-058532d8b6a44ec23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "192.168.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058532d8b6a44ec23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839684713127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-2"
            },
            "tags_all": {
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-026517932c2bfc3aa"
          },
          "dependencies": [
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:vpc/vpc-026517932c2bfc3aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-0bbf1fca7dac36a86",
            "default_route_table_id": "rtb-0e51f550e9fed5619",
            "default_security_group_id": "sg-0fa6271f6b0bce5c3",
            "dhcp_options_id": "dopt-0ea364480b0db7103",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026517932c2bfc3aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e51f550e9fed5619",
            "owner_id": "839684713127",
            "tags": {
              "Name": "network"
            },
            "tags_all": {
              "Name": "network"
            }
          }
        }
      ]
    }
  ]
}